# browserband

./: .gitignore  .gitmodules  .gn  BUILD.gn  README.md  angband.html
src/: jsm-worker-main.c  main-jsm.c  main-jsm.h  main.c
src/angband/: BUILD.gn  jsm-worker-main.c  main-jsm.c  pre.js  whitelist
src/angband/fromSubmodule/: main.c  savefile.c  ui-game.c  ui-signals.c  z-file.c
web/: BUILD.gn
web/angband/: angband.html
