import("//build/bands/angband.gni")

config("angband_worker_config"){
    screens_path = rebase_path("//bands/angband/lib/screens",".")
    help_path = rebase_path("//bands/angband/lib/help",".")
    customize_path = rebase_path("//bands/angband/lib/customize",".")
    gamedata_path = rebase_path("//bands/angband/lib/gamedata",".")
    user_path = rebase_path("//bands/angband/lib/user",".")
    whitelist_items = exec_script("//build/scripts/convert_whitelist.dart",[rebase_path("whitelist",root_build_dir)],"list lines")
    include_dirs  = ["//bands/angband/src","."]
    
    cflags = [
        "-O3"
    ]
    ldflags = [
        "-s","INVOKE_RUN=0",
        "-s" , "EMTERPRETIFY=1",
        "-s" , "EMTERPRETIFY_ASYNC=1",
        "-s" , "EXIT_RUNTIME=1",
        "-s" , "FORCE_FILESYSTEM=1",
        "-s" , "BUILD_AS_WORKER=1",
         "-s","EMTERPRETIFY_WHITELIST=${whitelist_items}",
        "--preload-file" , "${help_path}@/lib/help",
        "--preload-file" ,  "${screens_path}@/lib/screens",
        "--preload-file",  "${customize_path}@/lib/customize",
        "--preload-file",  "${gamedata_path}@/lib/gamedata",
        "--preload-file" , "${user_path}@/lib/user"
    ]
    defines = [
        "USE_JSM"
    ]
}


angfiles -= ["//bands/angband/src/ui-signals.c"]
angfiles += ["fromSubmodule/ui-signals.c"]

executable("angband_worker"){
    configs = [":angband_worker_config"]
    sources = angfiles + zfiles + [
        "main-jsm.c",
        "fromSubmodule/main.c"
    ] 
}

config("angband_main_config"){
     cflags = [
        "-O3"
    ]
    ldflags = [
        "-s","FORCE_FILESYSTEM=1"
    ]
}

executable("angband_main"){
    configs = [":angband_main_config"]
    sources = [
        "jsm-worker-main.c"
    ]
}